--- a/src/app/pages/home/components/nservicios/nservicios.component.html
+++ b/src/app/pages/home/components/nservicios/nservicios.component.html
@@ -16,15 +16,15 @@
               <div class="swiper-slide">
                 <div class="industry-two-slider__single-item">
                   <div class="industry-two-slider__single-item__image"><a
-                      href="unidades-de-negocio/comercializacion.html"><img
+                    routerLink="/unidades-de-negocio/comercializacion"><img
                         src="../../../assets/fotospages/thu_comercializacion_1572550762.jpg" class="img-fluid"
                         alt="Comercialización"></a></div>
                   <div class="industry-two-slider__single-item__content">
-                    <h3 class="title"><a href="unidades-de-negocio/comercializacion.html">Comercialización</a>
+                    <h3 class="title"><a routerLink="/unidades-de-negocio/comercializacion">Comercialización</a>
                     </h3>
                     <p class="subtitle"> Contamos con un amplio portafolio de productos
                       farmacéuticos de laboratorios reconocidos, para ...</p><a
-                      href="unidades-de-negocio/comercializacion.html" class="see-more-link see-more-link--dark">SABER
+                      routerLink="/unidades-de-negocio/comercializacion" class="see-more-link see-more-link--dark">SABER
                       MÁS <i class="ion-arrow-right-c"></i></a>
                   </div>
                 </div>
@@ -32,13 +32,13 @@
               <div class="swiper-slide">
                 <div class="industry-two-slider__single-item">
                   <div class="industry-two-slider__single-item__image"><a
-                      href="unidades-de-negocio/hospitalaria.html"><img
+                    routerLink="/unidades-de-negocio/hospitalaria"><img
                         src="../../../assets/fotospages/thu_hospitalaria_1572553256.jpg" class="img-fluid"
                         alt="Hospitalaria"></a></div>
                   <div class="industry-two-slider__single-item__content">
-                    <h3 class="title"><a href="unidades-de-negocio/hospitalaria.html">Hospitalaria</a></h3>
+                    <h3 class="title"><a routerLink="/unidades-de-negocio/hospitalaria">Hospitalaria</a></h3>
                     <p class="subtitle"> COBERTURA: RAMEDICAS Operador Logístico Farmacéutico,
-                      cuenta con un amplio portafolio de ...</p><a href="unidades-de-negocio/hospitalaria.html"
+                      cuenta con un amplio portafolio de ...</p><a routerLink="/unidades-de-negocio/hospitalaria"
                       class="see-more-link see-more-link--dark">SABER MÁS <i class="ion-arrow-right-c"></i></a>
                   </div>
                 </div>
@@ -46,13 +46,13 @@
               <div class="swiper-slide">
                 <div class="industry-two-slider__single-item">
                   <div class="industry-two-slider__single-item__image"><a
-                      href="unidades-de-negocio/dispensacion.html"><img
+                    routerLink="/unidades-de-negocio/dispensacion"><img
                         src="../../../assets/fotospages/thu_dispensacion_1572553334.jpg" class="img-fluid"
                         alt="Dispensación"></a></div>
                   <div class="industry-two-slider__single-item__content">
-                    <h3 class="title"><a href="unidades-de-negocio/dispensacion.html">Dispensación</a></h3>
+                    <h3 class="title"><a routerLink="/unidades-de-negocio/dispensacion">Dispensación</a></h3>
                     <p class="subtitle"> RAMEDICAS Operador Logístico Farmacéutico, ofrece el
-                      servicio de dispensación de medicamentos a ...</p><a href="unidades-de-negocio/dispensacion.html"
+                      servicio de dispensación de medicamentos a ...</p><a routerLink="/unidades-de-negocio/dispensacion"
                       class="see-more-link see-more-link--dark">SABER MÁS <i class="ion-arrow-right-c"></i></a>
                   </div>
                 </div>
