--- a/src/app/pages/home/components/slider/slider.component.html
+++ b/src/app/pages/home/components/slider/slider.component.html
@@ -56,7 +56,7 @@
               data-paddingtop="[20,20,20,20]" data-paddingright="[30,30,30,30]" data-paddingbottom="[20,20,20,20]"
               data-paddingleft="[30,30,30,30]"
               style="z-index:8;white-space:nowrap;color:#fff;letter-spacing:.5px;text-transform:uppercase;background-color:rgb(236,128,30);border-color:rgba(0,0,0,1);outline:0;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration:none;"
-              href="contacto.html">Contáctenos</a>
+              routerLink="/contacto">Contáctenos</a>
           </div>
         </li>
         <li data-index="rs-5" data-transition="random" data-slotamount="default" data-hideafterloop="0"
@@ -112,7 +112,7 @@
               data-paddingtop="[20,20,20,20]" data-paddingright="[30,30,30,30]" data-paddingbottom="[20,20,20,20]"
               data-paddingleft="[30,30,30,30]"
               style="z-index:8;white-space:nowrap;color:#fff;letter-spacing:.5px;text-transform:uppercase;background-color:rgb(236,128,30);border-color:rgba(0,0,0,1);outline:0;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration:none;"
-              href="contacto.html">Contáctenos</a>
+              routerLink="/contacto">Contáctenos</a>
           </div>
         </li>
         <li data-index="rs-2" data-transition="random" data-slotamount="default" data-hideafterloop="0"
@@ -168,7 +168,7 @@
               data-paddingtop="[20,20,20,20]" data-paddingright="[30,30,30,30]" data-paddingbottom="[20,20,20,20]"
               data-paddingleft="[30,30,30,30]"
               style="z-index:8;white-space:nowrap;color:#fff;letter-spacing:.5px;text-transform:uppercase;background-color:rgb(236,128,30);border-color:rgba(0,0,0,1);outline:0;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration:none;"
-              href="unidades-de-negocio/comercializacion.html">Saber más</a>
+              routerLink="/unidades-de-negocio/comercializacion">Saber más</a>
           </div>
         </li>
       </ul>
