--- a/src/app/pages/home/components/snosotros/snosotros.component.html
+++ b/src/app/pages/home/components/snosotros/snosotros.component.html
@@ -12,7 +12,7 @@
             <p style="text-align:justify;">Inició sus operaciones atendiendo el mercado regional y con
               su experiencia y solidez fue expandiéndose para atender las necesidades del sector a
               nivel nacional, gracias a sus buenas prácticas, excelente servicio al cliente y precios
-              altamente Competitivos.</p><br><a href="nosotros/quienes-somos.html"
+              altamente Competitivos.</p><br><a routerLink="/nosotros/quienes-somos"
               class="ht-btn ht-btn--default">Saber más</a>
           </div>
         </div>
