--- a/src/app/pages/home/components/soluciones/soluciones.component.html
+++ b/src/app/pages/home/components/soluciones/soluciones.component.html
@@ -6,7 +6,7 @@
         <div class="cta-content text-center">
           <h3 class="cta-content__subtitle">Ofreciendo soluciones logísticas desde 1993</h3>
           <h2 class="cta-content__title">Nuestras instalaciones y un equipo humano altamente calificado
-            nos permiten ofrecer el más alto nivel de servicio.</h2><br><a href="nosotros/quienes-somos.html"
+            nos permiten ofrecer el más alto nivel de servicio.</h2><br><a routerLink="/nosotros/quienes-somos"
             class="ht-btn ht-btn--default ht-btn--default--style3">SABER
             MÁS</a>
           <p class="cta-content__text"><br></p>
