--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -27,16 +27,16 @@
 								<div class="swiper-slide">
 									<div class="industry-two-slider__single-item">
 										<div class="industry-two-slider__single-item__image"><a
-												href="unidades-de-negocio/comercializacion.html"><img
+												routerLink="/unidades-de-negocio/comercializacion"><img
 													src="../../../assets/fotospages/thu_comercializacion_1572550762.jpg"
 													class="img-fluid" alt="Comercialización"></a></div>
 										<div class="industry-two-slider__single-item__content">
 											<h3 class="title"><a
-													href="unidades-de-negocio/comercializacion.html">Comercialización</a>
+													routerLink="/unidades-de-negocio/comercializacion">Comercialización</a>
 											</h3>
 											<p class="subtitle"> Contamos con un amplio portafolio de productos
 												farmacéuticos de laboratorios reconocidos, para ...</p><a
-												href="unidades-de-negocio/comercializacion.html"
+												routerLink="/unidades-de-negocio/comercializacion"
 												class="see-more-link see-more-link--dark">SABER MÁS <i
 													class="ion-arrow-right-c"></i></a>
 										</div>
@@ -45,15 +45,15 @@
 								<div class="swiper-slide">
 									<div class="industry-two-slider__single-item">
 										<div class="industry-two-slider__single-item__image"><a
-												href="unidades-de-negocio/hospitalaria.html"><img
+												routerLink="/unidades-de-negocio/hospitalaria"><img
 													src="../../../assets/fotospages/thu_hospitalaria_1572553256.jpg" class="img-fluid"
 													alt="Hospitalaria"></a></div>
 										<div class="industry-two-slider__single-item__content">
 											<h3 class="title"><a
-													href="unidades-de-negocio/hospitalaria.html">Hospitalaria</a></h3>
+													routerLink="/unidades-de-negocio/hospitalaria">Hospitalaria</a></h3>
 											<p class="subtitle"> COBERTURA: RAMEDICAS Operador Logístico Farmacéutico,
 												cuenta con un amplio portafolio de ...</p><a
-												href="unidades-de-negocio/hospitalaria.html"
+												routerLink="/unidades-de-negocio/hospitalaria"
 												class="see-more-link see-more-link--dark">SABER MÁS <i
 													class="ion-arrow-right-c"></i></a>
 										</div>
@@ -62,15 +62,15 @@
 								<div class="swiper-slide">
 									<div class="industry-two-slider__single-item">
 										<div class="industry-two-slider__single-item__image"><a
-												href="unidades-de-negocio/dispensacion.html"><img
+												routerLink="/unidades-de-negocio/dispensacion"><img
 													src="../../../assets/fotospages/thu_dispensacion_1572553334.jpg" class="img-fluid"
 													alt="Dispensación"></a></div>
 										<div class="industry-two-slider__single-item__content">
 											<h3 class="title"><a
-													href="unidades-de-negocio/dispensacion.html">Dispensación</a></h3>
+													routerLink="/unidades-de-negocio/dispensacion">Dispensación</a></h3>
 											<p class="subtitle"> RAMEDICAS Operador Logístico Farmacéutico, ofrece el
 												servicio de dispensación de medicamentos a ...</p><a
-												href="unidades-de-negocio/dispensacion.html"
+												routerLink="/unidades-de-negocio/dispensacion"
 												class="see-more-link see-more-link--dark">SABER MÁS <i
 													class="ion-arrow-right-c"></i></a>
 										</div>
@@ -101,7 +101,7 @@
 							<p style="text-align:justify;">Inició sus operaciones atendiendo el mercado regional y con
 								su experiencia y solidez fue expandiéndose para atender las necesidades del sector a
 								nivel nacional, gracias a sus buenas prácticas, excelente servicio al cliente y precios
-								altamente Competitivos.</p><br><a href="nosotros/quienes-somos.html"
+								altamente Competitivos.</p><br><a  routerLink="nosotros/quienes-somos"
 								class="ht-btn ht-btn--default">Saber más</a>
 						</div>
 					</div>
@@ -1238,17 +1238,17 @@
                 <div
                   class="blog-post-slider__single-slide blog-post-slider__single-slide--grid-view blog-post-slider__single-slide--grid-view--style3">
                   <div class="blog-post-slider__image"><a
-                      href="publicaciones/novedades/sello-de-calidad-certificado-empresa-biosegura-colombia.html"><img
+                      routerLink="publicaciones/novedades/sello-de-calidad-certificado-empresa-biosegura-colombia"><img
                         src="../../../assets/fotosnoticias/thu_sello_de_calidad_certificado_empresa_biosegura_colombia_1611601998.png"
                         class="img-fluid" alt="SELLO DE CALIDAD “CERTIFICADO EMPRESA BIOSEGURA COLOMBIA”"></a>
                   </div>
                   <div class="blog-post-slider__content blog-post-slider__content--style2">
                     <div class="post-meta">
                       <p class="post-date">Enero 25, 2021</p>
-                      <div class="post-category"><a href="publicaciones/novedades.html">Novedades</a></div>
+                      <div class="post-category"><a routerLink="/publicaciones/novedades">Novedades</a></div>
                     </div>
                     <h3 class="post-title post-title--black3"><a
-                        href="publicaciones/novedades/sello-de-calidad-certificado-empresa-biosegura-colombia.html">SELLO
+                        routerLink="publicaciones/novedades/sello-de-calidad-certificado-empresa-biosegura-colombia">SELLO
                         DE CALIDAD “CERTIFICADO EMPRESA BIOSEGURA COLOMBIA”</a></h3>
                     <p class="post-excerpt">El Ministerio de Comercio, Industria y Turismo
                       mediante la resolución 1288 de 2020 crea el sello de calidad
@@ -1256,7 +1256,7 @@
                       Company Certifícate Colombia", como una herramienta informativa y
                       comercial para diferenciar aquellos sectores de la economía, que
                       ofrezcan condiciones de bioseguridad</p>
-                  </div><a href="publicaciones/novedades/sello-de-calidad-certificado-empresa-biosegura-colombia.html"
+                  </div><a routerLink="publicaciones/novedades/sello-de-calidad-certificado-empresa-biosegura-colombia"
                     class="blog-readmore-button--icon"><i class="ion-arrow-right-c"></i></a>
                 </div>
               </div>
@@ -1269,7 +1269,7 @@
                   <div class="blog-post-slider__content blog-post-slider__content--style2">
                     <div class="post-meta">
                       <p class="post-date">Diciembre 04, 2020</p>
-                      <div class="post-category"><a href="publicaciones/novedades.html">Novedades</a></div>
+                      <div class="post-category"><a routerLink="/publicaciones/novedades">Novedades</a></div>
                     </div>
                     <h3 class="post-title post-title--black3"><a
                         href="publicaciones/novedades/comunicado-fin-de-ano-2020.html">COMUNICADO
@@ -1290,7 +1290,7 @@
                   <div class="blog-post-slider__content blog-post-slider__content--style2">
                     <div class="post-meta">
                       <p class="post-date">Diciembre 04, 2020</p>
-                      <div class="post-category"><a href="publicaciones/novedades.html">Novedades</a></div>
+                      <div class="post-category"><a routerLink="/publicaciones/novedades">Novedades</a></div>
                     </div>
                     <h3 class="post-title post-title--black3"><a
                         href="publicaciones/novedades/retiro-del-mercado-de-producto-oxitocina-10-uiml-solucion-inyectable-fresenius-kabi-colombia-sas.html">Retiro
@@ -1317,7 +1317,7 @@
         <div class="cta-content text-center">
           <h3 class="cta-content__subtitle">Ofreciendo soluciones logísticas desde 1993</h3>
           <h2 class="cta-content__title">Nuestras instalaciones y un equipo humano altamente calificado
-            nos permiten ofrecer el más alto nivel de servicio.</h2><br><a href="nosotros/quienes-somos.html"
+            nos permiten ofrecer el más alto nivel de servicio.</h2><br><a  routerLink="nosotros/quienes-somos"
             class="ht-btn ht-btn--default ht-btn--default--style3">SABER
             MÁS</a>
           <p class="cta-content__text"><br></p>
