--- a/src/app/pages/nosotros/nosotros.component.html
+++ b/src/app/pages/nosotros/nosotros.component.html
@@ -9,8 +9,8 @@
 				</div>
 				<div class="col-lg-12">
 					<ul class="breadcrumb-page-list breadcrumb-page-list--style2 text-uppercase">
-						<li class="has-children"><a href="inicio.html">Inicio</a></li>
-						<li><a href="nosotros.html">Nosotros</a></li>
+						<li class="has-children"><a routerLink="/home">Inicio</a></li>
+						<li><a routerLink="/nosotros">Nosotros</a></li>
 					</ul>
 				</div>
 			</div>
@@ -29,14 +29,14 @@
 							</div>
 							<div class="col-lg-8 col-md-7">
 								<div class="content">
-									<div class="service-details-text-wrapper"><a href="nosotros/quienes-somos.html">
+									<div class="service-details-text-wrapper"><a  routerLink="nosotros/quienes-somos">
 											<h2 class="title">Quienes somos</h2>
 										</a>
 										<p> RAMEDICAS Operador Logístico Farmacéutico, es una empresa líder en el
 											mercado nacional, aportando soluciones logísticas para la industria
 											farmacéutica. Fue constituida en el año de 1993, en la ciudad de
 											Bucaramanga. Inició sus operaciones atendiendo el mercado regional y con su
-											experiencia ...</p><a href="nosotros/quienes-somos.html"> Leer más</a>
+											experiencia ...</p><a  routerLink="nosotros/quienes-somos"> Leer más</a>
 									</div>
 								</div>
 							</div>
@@ -48,13 +48,13 @@
 							<div class="col-lg-8 col-md-7">
 								<div class="content">
 									<div class="service-details-text-wrapper"><a
-											href="nosotros/valores-corporativos.html">
+											routerLink="/nosotros/valores-corporativos">
 											<h2 class="title">Valores Corporativos</h2>
 										</a>
 										<p> Integridad Actuamos dentro de los más rigurosos principios éticos, de manera
 											honesta y transparente, dentro del marco de la ley, para construir
 											relaciones empresariales de respeto y confianza. ...</p><a
-											href="nosotros/valores-corporativos.html"> Leer más</a>
+											routerLink="/nosotros/valores-corporativos"> Leer más</a>
 									</div>
 								</div>
 							</div>
@@ -68,14 +68,14 @@
 							</div>
 							<div class="col-lg-8 col-md-7">
 								<div class="content">
-									<div class="service-details-text-wrapper"><a href="nosotros/mision-y-vision.html">
+									<div class="service-details-text-wrapper"><a routerLink="/nosotros/mision-y-vision">
 											<h2 class="title">Misión y visión</h2>
 										</a>
 										<p> MISIÓN RAMEDICAS Operador Logístico Farmacéutico, como empresa dedicada a la
 											gestión y operación logística farmacéutica, provee las mejores soluciones en
 											la cadena de abastecimiento del servicio farmacéutico, trabaja para
 											garantizar la prestación del servicio con oportunidad, calidad y ...</p><a
-											href="nosotros/mision-y-vision.html"> Leer más</a>
+											routerLink="/nosotros/mision-y-vision"> Leer más</a>
 									</div>
 								</div>
 							</div>
@@ -89,14 +89,14 @@
 							</div>
 							<div class="col-lg-8 col-md-7">
 								<div class="content">
-									<div class="service-details-text-wrapper"><a href="nosotros/politicas.html">
+									<div class="service-details-text-wrapper"><a routerLink="/nosotros/politicas">
 											<h2 class="title">Políticas</h2>
 										</a>
 										<p> POLITICA DEL SISTEMA INTEGRADO DE GESTIÓN RAMEDICAS Operador Logístico
 											Farmacéutico, organización dedicada a la comercialización, distribución y
 											dispensación de productos farmacéuticos de uso humano, está comprometida
 											con: La satisfacción de las necesidades de nuestros clientes y ...</p><a
-											href="nosotros/politicas.html"> Leer más</a>
+											routerLink="/nosotros/politicas"> Leer más</a>
 									</div>
 								</div>
 							</div>
@@ -107,14 +107,14 @@
 							<div class="col-lg-4 col-md-5"></div>
 							<div class="col-lg-8 col-md-7">
 								<div class="content">
-									<div class="service-details-text-wrapper"><a href="nosotros/certificaciones.html">
+									<div class="service-details-text-wrapper"><a routerLink="/nosotros/certificaciones">
 											<h2 class="title">Certificaciones</h2>
 										</a>
 										<p> Certificación ISO 45001:2018 Luego de implementar el Sistema de Gestión de
 											Seguridad y Salud en el Trabajo (SG-SST) , el ICONTEC valida la adecuación y
 											conveniencia de la gestión que realizamos con nuestros procesos mediante
 											auditoría realizada en el mes de Mayo de 2019 y otorga la ...</p><a
-											href="nosotros/certificaciones.html"> Leer más</a>
+											routerLink="/nosotros/certificaciones"> Leer más</a>
 									</div>
 								</div>
 							</div>
@@ -130,7 +130,7 @@
 							<div class="col-lg-8 col-md-7">
 								<div class="content">
 									<div class="service-details-text-wrapper"><a
-											href="nosotros/politica-de-tratamiento-de-datos.html">
+											 routerLink="nosotros/politica-de-tratamiento-de-datos">
 											<h2 class="title">Política de tratamiento de datos</h2>
 										</a>
 										<p> La presente Política de Tratamiento de la Información Personal es el
@@ -138,7 +138,7 @@
 											por RAMEDICAS S.A.S para realizar tratamiento de datos personales en
 											concordancia con las disposiciones normativas que rigen la materia y en
 											respeto de la ...</p><a
-											href="nosotros/politica-de-tratamiento-de-datos.html"> Leer más</a>
+											 routerLink="nosotros/politica-de-tratamiento-de-datos"> Leer más</a>
 									</div>
 								</div>
 							</div>
@@ -155,7 +155,7 @@
       <div class="container-fluid--cp-60">
         <div class="row align-items-center">
           <div class="col-md-4 col-sm-6 col-9">
-            <div class="logo"><a href="../inicio.html"><img src="../assets/img/logo/logo-blue-dark.png" class="img-fluid"
+            <div class="logo"><a  routerLink="/home"><img src="../assets/img/logo/logo-blue-dark.png" class="img-fluid"
                   alt="Ramédicas"></a></div>
           </div>
           <div class="col-md-8 col-sm-6 col-3">
@@ -168,49 +168,49 @@
     <div class="mobile-menu-overlay__body">
       <nav class="offcanvas-navigation">
         <ul>
-          <li class=" "><a href="../inicio.html" class=""> Inicio</a></li>
+          <li class=" "><a  routerLink="/home" class=""> Inicio</a></li>
           <li class=" has-children"><a href="javascript:void(0)" class="">Nosotros</a>
             <ul class="sub-menu">
-              <li><a href="../nosotros/quienes-somos.html" class="" hello="">Quienes somos</a></li>
-              <li><a href="../nosotros/valores-corporativos.html" class="" hello="">Valores
+              <li><a  routerLink="/nosotros/quienes-somos" class="" hello="">Quienes somos</a></li>
+              <li><a  routerLink="/nosotros/valores-corporativos" class="" hello="">Valores
                   Corporativos</a></li>
-              <li><a href="../nosotros/mision-y-vision.html" class="" hello="">Misión y visión</a></li>
-              <li><a href="../nosotros/politicas.html" class="" hello="">Políticas</a></li>
-              <li><a href="../nosotros/certificaciones.html" class="" hello="">Certificaciones</a></li>
-              <li><a href="../nosotros/politica-de-tratamiento-de-datos.html" class="" hello="">Política
+              <li><a  routerLink="/nosotros/mision-y-vision" class="" hello="">Misión y visión</a></li>
+              <li><a  routerLink="/nosotros/politicas" class="" hello="">Políticas</a></li>
+              <li><a  routerLink="/nosotros/certificaciones" class="" hello="">Certificaciones</a></li>
+              <li><a  routerLink="/nosotros/politica-de-tratamiento-de-datos" class="" hello="">Política
                   de tratamiento de datos</a></li>
             </ul>
           </li>
           <li class=" active has-children"><a href="javascript:void(0)" class="active">Unidades de negocio</a>
             <ul class="sub-menu">
-              <li><a href="comercializacion.html" class="" hello="">Comercialización</a></li>
-              <li><a href="hospitalaria.html" class="" hello="">Hospitalaria</a></li>
-              <li><a href="dispensacion.html" class="" hello="">Dispensación</a></li>
+              <li><a  routerLink="/unidades-de-negocio/comercializacion" class="" hello="">Comercialización</a></li>
+              <li><a  routerLink="/unidades-de-negocio/hospitalaria" class="" hello="">Hospitalaria</a></li>
+              <li><a  routerLink="/unidades-de-negocio/dispensacion" class="" hello="">Dispensación</a></li>
             </ul>
           </li>
           <li class=" has-children"><a href="javascript:void(0)" class="">Portafolio</a>
             <ul class="sub-menu">
-              <li><a href="../portafolio/lineas-de-productos.html" class="" hello="">Lineas de
+              <li><a  routerLink="/portafolio/lineas-de-productos" class="" hello="">Lineas de
                   productos</a></li>
-              <li><a href="../portafolio/nuestros-proveedores.html" class="" hello="">Nuestros
+              <li><a  routerLink="/portafolio/nuestros-proveedores" class="" hello="">Nuestros
                   proveedores</a></li>
             </ul>
           </li>
-          <li class=" has-children"><a href="../publicaciones.html" class="">Publicaciones</a>
+          <li class=" has-children"><a routerLink="/publicaciones" class="">Publicaciones</a>
             <ul class="sub-menu">
-              <li><a href="../publicaciones/regulatorios.html" class="" hello="">Regulatorios</a></li>
-              <li><a href="../publicaciones/actualidad.html" class="" hello="">Actualidad</a></li>
-              <li><a href="../publicaciones/novedades.html" class="" hello="">Novedades</a></li>
+              <li><a  routerLink="/publicaciones/regulatorios" class="" hello="">Regulatorios</a></li>
+              <li><a  routerLink="/publicaciones/actualidad" class="" hello="">Actualidad</a></li>
+              <li><a  routerLink="/publicaciones/novedades" class="" hello="">Novedades</a></li>
             </ul>
           </li>
           <li class=" has-children"><a href="javascript:void(0)" class="">Contacto</a>
             <ul class="sub-menu">
-              <li><a href="../contacto/directorio.html" class="" hello="">Directorio</a></li>
-              <li><a href="../contacto/trabaje-con-nosotros.html" class="" hello="">Trabaje con
+              <li><a  routerLink="/contacto/directorio" class="" hello="">Directorio</a></li>
+              <li><a  routerLink="/contacto/trabaje-con-nosotros" class="" hello="">Trabaje con
                   nosotros</a></li>
-              <li><a href="../index-1.htm" class="" hello="">PQRS</a></li>
-              <li><a href="../index-2.htm" class="" hello="">Plataforma Clientes</a></li>
-              <li><a href="../contacto.html" class="" hello="">Escríbenos</a></li>
+              <li><a href="https://pqrs.ramedicas.com/" class="" hello="">PQRS</a></li>
+              <li><a href="https://clientes.ramedicas.com/auth/login" class="" hello="">Plataforma Clientes</a></li>
+              <li><a routerLink="/contacto" class="" hello="">Escríbenos</a></li>
             </ul>
           </li>
         </ul>
