--- a/src/app/pages/publicaciones/actualidad/actualidad.component.html
+++ b/src/app/pages/publicaciones/actualidad/actualidad.component.html
@@ -10,8 +10,8 @@ data-bg="fotossecciones/slide_ramedicas_1568155040.jpg" style="background-image:
     </div>
     <div class="col-lg-12">
       <ul class="breadcrumb-page-list breadcrumb-page-list--style2 text-uppercase">
-        <li class="has-children"><a href="../inicio.html">Inicio</a></li>
-        <li><a href="../publicaciones.html">Publicaciones</a></li>
+        <li class="has-children"><a  routerLink="/home">Inicio</a></li>
+        <li><a routerLink="/publicaciones">Publicaciones</a></li>
       </ul>
     </div>
   </div>
@@ -27,7 +27,7 @@ data-bg="fotossecciones/slide_ramedicas_1568155040.jpg" style="background-image:
             <div
               class="blog-post-slider__single-slide blog-post-slider__single-slide--extra-space blog-post-slider__single-slide--grid-view blog-post-slider__single-slide--grid-view--style2">
               <div class="blog-post-slider__image"><a
-                  href="actualidad/las-maneras-mas-comunes-de-contagiarse-de-covid-19-tras-la-reapertura.html"><img
+                  routerLink="/actualidad/las-maneras-mas-comunes-de-contagiarse-de-covid-19-tras-la-reapertura"><img
                     src="../../../../assets/fotosnoticias/thu_las_maneras_mas_comunes_de_contagiarse_de_covid_19_tras_la_reapertura_1601556422.jpg"
                     class="img-fluid"
                     alt="Las maneras más comunes de contagiarse de COVID-19 tras la reapertura"></a>
@@ -38,13 +38,13 @@ data-bg="fotossecciones/slide_ramedicas_1568155040.jpg" style="background-image:
                   <div class="post-category"><a href="actualidad.html">Actualidad</a></div>
                 </div>
                 <h3 class="post-title"><a
-                    href="actualidad/las-maneras-mas-comunes-de-contagiarse-de-covid-19-tras-la-reapertura.html">Las
+                    routerLink="/actualidad/las-maneras-mas-comunes-de-contagiarse-de-covid-19-tras-la-reapertura">Las
                     maneras más comunes de contagiarse de COVID-19 tras la reapertura</a>
                 </h3>
                 <p class="post-excerpt">Según una profesional en medicina, estas son las formas
                   más comunes de contagio</p>
               </div><a
-                href="actualidad/las-maneras-mas-comunes-de-contagiarse-de-covid-19-tras-la-reapertura.html"
+                routerLink="/actualidad/las-maneras-mas-comunes-de-contagiarse-de-covid-19-tras-la-reapertura"
                 class="blog-readmore-button--icon"><i class="ion-arrow-right-c"></i></a>
             </div>
           </div>
@@ -260,7 +260,7 @@ data-bg="fotossecciones/slide_ramedicas_1568155040.jpg" style="background-image:
       <div class="container-fluid--cp-60">
           <div class="row align-items-center">
               <div class="col-md-4 col-sm-6 col-9">
-                  <div class="logo"><a href="../inicio.html"><img src="../../../../assets/img/logo/logo-blue-dark.png"
+                  <div class="logo"><a  routerLink="/home"><img src="../../../../assets/img/logo/logo-blue-dark.png"
                               class="img-fluid" alt="Ramédicas"></a></div>
               </div>
               <div class="col-md-8 col-sm-6 col-3">
@@ -274,51 +274,51 @@ data-bg="fotossecciones/slide_ramedicas_1568155040.jpg" style="background-image:
   <div class="mobile-menu-overlay__body">
       <nav class="offcanvas-navigation">
           <ul>
-              <li class=" "><a href="../inicio.html" class=""> Inicio</a></li>
+              <li class=" "><a  routerLink="/home" class=""> Inicio</a></li>
               <li class=" active has-children"><a href="javascript:void(0)" class="active">Nosotros</a>
                   <ul class="sub-menu">
-                      <li><a href="quienes-somos.html" class="" hello="">Quienes somos</a></li>
-                      <li><a href="valores-corporativos.html" class="" hello="">Valores Corporativos</a></li>
-                      <li><a href="mision-y-vision.html" class="" hello="">Misión y visión</a></li>
-                      <li><a href="politicas.html" class="" hello="">Políticas</a></li>
-                      <li><a href="certificaciones.html" class="" hello="">Certificaciones</a></li>
-                      <li><a href="politica-de-tratamiento-de-datos.html" class="" hello="">Política de
+                      <li><a routerLink="/nosotros/quienes-somos" class="" hello="">Quienes somos</a></li>
+                      <li><a routerLink="/nosotros/valores-corporativos" class="" hello="">Valores Corporativos</a></li>
+                      <li><a routerLink="/nosotros/mision-y-vision" class="" hello="">Misión y visión</a></li>
+                      <li><a routerLink="/nosotros/politicas" class="" hello="">Políticas</a></li>
+                      <li><a routerLink="/nosotros/certificaciones" class="" hello="">Certificaciones</a></li>
+                      <li><a routerLink="/nosotros/politica-de-tratamiento-de-datos" class="" hello="">Política de
                               tratamiento de datos</a></li>
                   </ul>
               </li>
               <li class=" has-children"><a href="javascript:void(0)" class="">Unidades de negocio</a>
                   <ul class="sub-menu">
-                      <li><a href="../unidades-de-negocio/comercializacion.html" class=""
+                      <li><a routerLink="/unidades-de-negocio/comercializacion" class=""
                               hello="">Comercialización</a></li>
-                      <li><a href="../unidades-de-negocio/hospitalaria.html" class="" hello="">Hospitalaria</a>
+                      <li><a routerLink="/unidades-de-negocio/hospitalaria" class="" hello="">Hospitalaria</a>
                       </li>
-                      <li><a href="../unidades-de-negocio/dispensacion.html" class="" hello="">Dispensación</a>
+                      <li><a routerLink="/unidades-de-negocio/dispensacion" class="" hello="">Dispensación</a>
                       </li>
                   </ul>
               </li>
               <li class=" has-children"><a href="javascript:void(0)" class="">Portafolio</a>
                   <ul class="sub-menu">
-                      <li><a href="../portafolio/lineas-de-productos.html" class="" hello="">Lineas de
+                      <li><a  routerLink="/portafolio/lineas-de-productos" class="" hello="">Lineas de
                               productos</a></li>
-                      <li><a href="../portafolio/nuestros-proveedores.html" class="" hello="">Nuestros
+                      <li><a  routerLink="/portafolio/nuestros-proveedores" class="" hello="">Nuestros
                               proveedores</a></li>
                   </ul>
               </li>
-              <li class=" has-children"><a href="../publicaciones.html" class="">Publicaciones</a>
+              <li class=" has-children"><a routerLink="/publicaciones" class="">Publicaciones</a>
                   <ul class="sub-menu">
-                      <li><a href="../publicaciones/regulatorios.html" class="" hello="">Regulatorios</a></li>
-                      <li><a href="../publicaciones/actualidad.html" class="" hello="">Actualidad</a></li>
-                      <li><a href="../publicaciones/novedades.html" class="" hello="">Novedades</a></li>
+                      <li><a  routerLink="/publicaciones/regulatorios" class="" hello="">Regulatorios</a></li>
+                      <li><a  routerLink="/publicaciones/actualidad" class="" hello="">Actualidad</a></li>
+                      <li><a  routerLink="/publicaciones/novedades" class="" hello="">Novedades</a></li>
                   </ul>
               </li>
               <li class=" has-children"><a href="javascript:void(0)" class="">Contacto</a>
                   <ul class="sub-menu">
-                      <li><a href="../contacto/directorio.html" class="" hello="">Directorio</a></li>
-                      <li><a href="../contacto/trabaje-con-nosotros.html" class="" hello="">Trabaje con
+                      <li><a  routerLink="/contacto/directorio" class="" hello="">Directorio</a></li>
+                      <li><a  routerLink="/contacto/trabaje-con-nosotros" class="" hello="">Trabaje con
                               nosotros</a></li>
-                      <li><a href="../index-1.htm" class="" hello="">PQRS</a></li>
-                      <li><a href="../index-2.htm" class="" hello="">Plataforma Clientes</a></li>
-                      <li><a href="../contacto.html" class="" hello="">Escríbenos</a></li>
+                      <li><a href="https://pqrs.ramedicas.com/" class="" hello="">PQRS</a></li>
+                      <li><a href="https://clientes.ramedicas.com/auth/login" class="" hello="">Plataforma Clientes</a></li>
+                      <li><a routerLink="/contacto" class="" hello="">Escríbenos</a></li>
                   </ul>
               </li>
           </ul>
