--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -27,7 +27,7 @@
       <div class="row no-gutters">
         <div class="col-lg-12 position-static">
           <div class="header-navigation-container">
-            <div class="logo"><a href="inicio"><img src="assets/img/logo/logo-blue-dark.png"
+            <div class="logo"><a routerLink="/home"><img src="assets/img/logo/logo-blue-dark.png"
                   class="img-fluid" alt="Ramédicas"></a></div>
             <div class="header-navigation-wrapper header-navigation-wrapper--style4">
               <div class="header-navigation-wrapper--style3__left">
