--- a/src/app/pages/contacto/trabaje-con-nosotros/trabaje-con-nosotros.component.html
+++ b/src/app/pages/contacto/trabaje-con-nosotros/trabaje-con-nosotros.component.html
@@ -26,8 +26,8 @@
             text-uppercase
           "
         >
-          <li class="has-children"><a href="../inicio.html">Inicio</a></li>
-          <li><a href="../contacto.html">Contacto</a></li>
+          <li class="has-children"><a  routerLink="/home">Inicio</a></li>
+          <li><a routerLink="/contacto">Contacto</a></li>
         </ul>
       </div>
     </div>
@@ -413,7 +413,7 @@
                           ><br /><span
                             >Acepto la
                             <a
-                              href="../nosotros/politica-de-tratamiento-de-datos.html"
+                               routerLink="/nosotros/politica-de-tratamiento-de-datos"
                               target="_blank"
                               ><span style="color: #e67e22"
                                 >política de tratamiento de datos.</span
@@ -454,30 +454,30 @@
             <h2 class="widget-title">Contacto</h2>
             <ul class="sidebar-category">
               <li class="">
-                <a href="directorio.html" style=""
+                <a routerLink="/contacto/directorio" style=""
                   ><i class="fa fa-chevron-right style-right"></i
                   >Directorio</a
                 >
               </li>
               <li class="active">
-                <a href="trabaje-con-nosotros.html" style=""
+                <a routerLink="/contacto/trabaje-con-nosotros" style=""
                   ><i class="fa fa-chevron-right style-right"></i>Trabaje
                   con nosotros</a
                 >
               </li>
               <li class="">
-                <a href="pqrs.html" style=""
+                <a href="https://pqrs.ramedicas.com/" style=""
                   ><i class="fa fa-chevron-right style-right"></i>PQRS</a
                 >
               </li>
               <li class="">
-                <a href="plataforma-clientes.html" style=""
+                <a href="https://clientes.ramedicas.com/auth/login" style=""
                   ><i class="fa fa-chevron-right style-right"></i>Plataforma
                   Clientes</a
                 >
               </li>
               <li class="">
-                <a href="../contacto.html" style=""
+                <a routerLink="/contacto" style=""
                   ><i class="fa fa-chevron-right style-right"></i
                   >Escríbenos</a
                 >
@@ -489,7 +489,7 @@
             <div class="sidebar-case-study-list">
               <div class="single-sidebar-case-study">
                 <div class="single-sidebar-case-study__image">
-                  <a href="../unidades-de-negocio/comercializacion.html"
+                  <a routerLink="/unidades-de-negocio/comercializacion"
                     ><img
                       src="../../../../assets/fotospages/mic_comercializacion_1572550762.jpg"
                       class="img-fluid"
@@ -498,7 +498,7 @@
                 </div>
                 <div class="single-sidebar-case-study__content">
                   <h3 class="title">
-                    <a href="../unidades-de-negocio/comercializacion.html"
+                    <a routerLink="/unidades-de-negocio/comercializacion"
                       >Comercialización</a
                     >
                   </h3>
@@ -506,7 +506,7 @@
               </div>
               <div class="single-sidebar-case-study">
                 <div class="single-sidebar-case-study__image">
-                  <a href="../unidades-de-negocio/hospitalaria.html"
+                  <a routerLink="/unidades-de-negocio/hospitalaria"
                     ><img
                       src="../../../../assets/fotospages/mic_hospitalaria_1572553256.jpg"
                       class="img-fluid"
@@ -515,7 +515,7 @@
                 </div>
                 <div class="single-sidebar-case-study__content">
                   <h3 class="title">
-                    <a href="../unidades-de-negocio/hospitalaria.html"
+                    <a routerLink="/unidades-de-negocio/hospitalaria"
                       >Hospitalaria</a
                     >
                   </h3>
@@ -523,7 +523,7 @@
               </div>
               <div class="single-sidebar-case-study">
                 <div class="single-sidebar-case-study__image">
-                  <a href="../unidades-de-negocio/dispensacion.html"
+                  <a routerLink="/unidades-de-negocio/dispensacion"
                     ><img
                       src="../../../../assets/fotospages/mic_dispensacion_1572553334.jpg"
                       class="img-fluid"
@@ -532,7 +532,7 @@
                 </div>
                 <div class="single-sidebar-case-study__content">
                   <h3 class="title">
-                    <a href="../unidades-de-negocio/dispensacion.html"
+                    <a routerLink="/unidades-de-negocio/dispensacion"
                       >Dispensación</a
                     >
                   </h3>
@@ -559,7 +559,7 @@
       <div class="container-fluid--cp-60">
           <div class="row align-items-center">
               <div class="col-md-4 col-sm-6 col-9">
-                  <div class="logo"><a href="../inicio.html"><img src="../../../../assets/img/logo/logo-blue-dark.png"
+                  <div class="logo"><a  routerLink="/home"><img src="../../../../assets/img/logo/logo-blue-dark.png"
                               class="img-fluid" alt="Ramédicas"></a></div>
               </div>
               <div class="col-md-8 col-sm-6 col-3">
@@ -573,51 +573,51 @@
   <div class="mobile-menu-overlay__body">
       <nav class="offcanvas-navigation">
           <ul>
-              <li class=" "><a href="../inicio.html" class=""> Inicio</a></li>
+              <li class=" "><a  routerLink="/home" class=""> Inicio</a></li>
               <li class=" active has-children"><a href="javascript:void(0)" class="active">Nosotros</a>
                   <ul class="sub-menu">
-                      <li><a href="quienes-somos.html" class="" hello="">Quienes somos</a></li>
-                      <li><a href="valores-corporativos.html" class="" hello="">Valores Corporativos</a></li>
-                      <li><a href="mision-y-vision.html" class="" hello="">Misión y visión</a></li>
-                      <li><a href="politicas.html" class="" hello="">Políticas</a></li>
-                      <li><a href="certificaciones.html" class="" hello="">Certificaciones</a></li>
-                      <li><a href="politica-de-tratamiento-de-datos.html" class="" hello="">Política de
+                      <li><a routerLink="/nosotros/quienes-somos" class="" hello="">Quienes somos</a></li>
+                      <li><a routerLink="/nosotros/valores-corporativos" class="" hello="">Valores Corporativos</a></li>
+                      <li><a routerLink="/nosotros/mision-y-vision" class="" hello="">Misión y visión</a></li>
+                      <li><a routerLink="/nosotros/politicas" class="" hello="">Políticas</a></li>
+                      <li><a routerLink="/nosotros/certificaciones" class="" hello="">Certificaciones</a></li>
+                      <li><a routerLink="/nosotros/politica-de-tratamiento-de-datos" class="" hello="">Política de
                               tratamiento de datos</a></li>
                   </ul>
               </li>
               <li class=" has-children"><a href="javascript:void(0)" class="">Unidades de negocio</a>
                   <ul class="sub-menu">
-                      <li><a href="../unidades-de-negocio/comercializacion.html" class=""
+                      <li><a routerLink="/unidades-de-negocio/comercializacion" class=""
                               hello="">Comercialización</a></li>
-                      <li><a href="../unidades-de-negocio/hospitalaria.html" class="" hello="">Hospitalaria</a>
+                      <li><a routerLink="/unidades-de-negocio/hospitalaria" class="" hello="">Hospitalaria</a>
                       </li>
-                      <li><a href="../unidades-de-negocio/dispensacion.html" class="" hello="">Dispensación</a>
+                      <li><a routerLink="/unidades-de-negocio/dispensacion" class="" hello="">Dispensación</a>
                       </li>
                   </ul>
               </li>
               <li class=" has-children"><a href="javascript:void(0)" class="">Portafolio</a>
                   <ul class="sub-menu">
-                      <li><a href="../portafolio/lineas-de-productos.html" class="" hello="">Lineas de
+                      <li><a  routerLink="/portafolio/lineas-de-productos" class="" hello="">Lineas de
                               productos</a></li>
-                      <li><a href="../portafolio/nuestros-proveedores.html" class="" hello="">Nuestros
+                      <li><a  routerLink="/portafolio/nuestros-proveedores" class="" hello="">Nuestros
                               proveedores</a></li>
                   </ul>
               </li>
-              <li class=" has-children"><a href="../publicaciones.html" class="">Publicaciones</a>
+              <li class=" has-children"><a routerLink="/publicaciones" class="">Publicaciones</a>
                   <ul class="sub-menu">
-                      <li><a href="../publicaciones/regulatorios.html" class="" hello="">Regulatorios</a></li>
-                      <li><a href="../publicaciones/actualidad.html" class="" hello="">Actualidad</a></li>
-                      <li><a href="../publicaciones/novedades.html" class="" hello="">Novedades</a></li>
+                      <li><a  routerLink="/publicaciones/regulatorios" class="" hello="">Regulatorios</a></li>
+                      <li><a  routerLink="/publicaciones/actualidad" class="" hello="">Actualidad</a></li>
+                      <li><a  routerLink="/publicaciones/novedades" class="" hello="">Novedades</a></li>
                   </ul>
               </li>
               <li class=" has-children"><a href="javascript:void(0)" class="">Contacto</a>
                   <ul class="sub-menu">
-                      <li><a href="../contacto/directorio.html" class="" hello="">Directorio</a></li>
-                      <li><a href="../contacto/trabaje-con-nosotros.html" class="" hello="">Trabaje con
+                      <li><a  routerLink="/contacto/directorio" class="" hello="">Directorio</a></li>
+                      <li><a  routerLink="/contacto/trabaje-con-nosotros" class="" hello="">Trabaje con
                               nosotros</a></li>
-                      <li><a href="../index-1.htm" class="" hello="">PQRS</a></li>
-                      <li><a href="../index-2.htm" class="" hello="">Plataforma Clientes</a></li>
-                      <li><a href="../contacto.html" class="" hello="">Escríbenos</a></li>
+                      <li><a href="https://pqrs.ramedicas.com/" class="" hello="">PQRS</a></li>
+                      <li><a href="https://clientes.ramedicas.com/auth/login" class="" hello="">Plataforma Clientes</a></li>
+                      <li><a routerLink="/contacto" class="" hello="">Escríbenos</a></li>
                   </ul>
               </li>
           </ul>
