--- a/src/app/pages/home/components/precientes/precientes.component.html
+++ b/src/app/pages/home/components/precientes/precientes.component.html
@@ -14,17 +14,17 @@
                 <div
                   class="blog-post-slider__single-slide blog-post-slider__single-slide--grid-view blog-post-slider__single-slide--grid-view--style3">
                   <div class="blog-post-slider__image"><a
-                      href="publicaciones/novedades/sello-de-calidad-certificado-empresa-biosegura-colombia.html"><img
+                      routerLink="publicaciones/novedades/sello-de-calidad-certificado-empresa-biosegura-colombia"><img
                         src="../../../assets/fotosnoticias/thu_sello_de_calidad_certificado_empresa_biosegura_colombia_1611601998.png"
                         class="img-fluid" alt="SELLO DE CALIDAD “CERTIFICADO EMPRESA BIOSEGURA COLOMBIA”"></a>
                   </div>
                   <div class="blog-post-slider__content blog-post-slider__content--style2">
                     <div class="post-meta">
                       <p class="post-date">Enero 25, 2021</p>
-                      <div class="post-category"><a href="publicaciones/novedades.html">Novedades</a></div>
+                      <div class="post-category"><a routerLink="/publicaciones/novedades">Novedades</a></div>
                     </div>
                     <h3 class="post-title post-title--black3"><a
-                        href="publicaciones/novedades/sello-de-calidad-certificado-empresa-biosegura-colombia.html">SELLO
+                        routerLink="publicaciones/novedades/sello-de-calidad-certificado-empresa-biosegura-colombia">SELLO
                         DE CALIDAD “CERTIFICADO EMPRESA BIOSEGURA COLOMBIA”</a></h3>
                     <p class="post-excerpt">El Ministerio de Comercio, Industria y Turismo
                       mediante la resolución 1288 de 2020 crea el sello de calidad
@@ -32,7 +32,7 @@
                       Company Certifícate Colombia", como una herramienta informativa y
                       comercial para diferenciar aquellos sectores de la economía, que
                       ofrezcan condiciones de bioseguridad</p>
-                  </div><a href="publicaciones/novedades/sello-de-calidad-certificado-empresa-biosegura-colombia.html"
+                  </div><a routerLink="publicaciones/novedades/sello-de-calidad-certificado-empresa-biosegura-colombia"
                     class="blog-readmore-button--icon"><i class="ion-arrow-right-c"></i></a>
                 </div>
               </div>
@@ -45,7 +45,7 @@
                   <div class="blog-post-slider__content blog-post-slider__content--style2">
                     <div class="post-meta">
                       <p class="post-date">Diciembre 04, 2020</p>
-                      <div class="post-category"><a href="publicaciones/novedades.html">Novedades</a></div>
+                      <div class="post-category"><a routerLink="/publicaciones/novedades">Novedades</a></div>
                     </div>
                     <h3 class="post-title post-title--black3"><a
                         href="publicaciones/novedades/comunicado-fin-de-ano-2020.html">COMUNICADO
@@ -66,7 +66,7 @@
                   <div class="blog-post-slider__content blog-post-slider__content--style2">
                     <div class="post-meta">
                       <p class="post-date">Diciembre 04, 2020</p>
-                      <div class="post-category"><a href="publicaciones/novedades.html">Novedades</a></div>
+                      <div class="post-category"><a routerLink="/publicaciones/novedades">Novedades</a></div>
                     </div>
                     <h3 class="post-title post-title--black3"><a
                         href="publicaciones/novedades/retiro-del-mercado-de-producto-oxitocina-10-uiml-solucion-inyectable-fresenius-kabi-colombia-sas.html">Retiro
