--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -34,73 +34,73 @@
 				<div class="row no-gutters">
 					<div class="col-lg-12 position-static">
 						<div class="header-navigation-container">
-							<div class="logo"><a href="inicio.html"><img src="assets/img/logo/logo-blue-dark.png"
+							<div class="logo"><a routerLink="/home"><img src="assets/img/logo/logo-blue-dark.png"
 										class="img-fluid" alt="Ramédicas"></a></div>
 							<div class="header-navigation-wrapper header-navigation-wrapper--style4">
 								<div class="header-navigation-wrapper--style3__left">
 									<div class="header-navigation__nav header-navigation__nav--style5 position-static">
 										<nav>
 											<ul>
-												<li class=" "><a href="inicio.html" class=""> Inicio</a></li>
+												<li class=" "><a routerLink="/home" class=""> Inicio</a></li>
 												<li class="  has-children has-children--multilevel-submenu"><a
 														href="javascript:void(0)" class="">Nosotros</a>
 													<ul class="submenu">
-														<li><a href="nosotros/quienes-somos.html" class="">Quienes
+														<li><a  routerLink="nosotros/quienes-somos" class="">Quienes
 																somos</a></li>
-														<li><a href="nosotros/valores-corporativos.html"
+														<li><a routerLink="/nosotros/valores-corporativos"
 																class="">Valores Corporativos</a></li>
-														<li><a href="nosotros/mision-y-vision.html" class="">Misión y
+														<li><a routerLink="/nosotros/mision-y-vision" class="">Misión y
 																visión</a></li>
-														<li><a href="nosotros/politicas.html" class="">Políticas</a>
+														<li><a routerLink="/nosotros/politicas" class="">Políticas</a>
 														</li>
-														<li><a href="nosotros/certificaciones.html"
+														<li><a routerLink="/nosotros/certificaciones"
 																class="">Certificaciones</a></li>
-														<li><a href="nosotros/politica-de-tratamiento-de-datos.html"
+														<li><a  routerLink="nosotros/politica-de-tratamiento-de-datos"
 																class="">Política de tratamiento de datos</a></li>
 													</ul>
 												</li>
 												<li class="  has-children has-children--multilevel-submenu"><a
 														href="javascript:void(0)" class="">Unidades de negocio</a>
 													<ul class="submenu">
-														<li><a href="unidades-de-negocio/comercializacion.html"
+														<li><a routerLink="/unidades-de-negocio/comercializacion"
 																class="">Comercialización</a></li>
-														<li><a href="unidades-de-negocio/hospitalaria.html"
+														<li><a routerLink="/unidades-de-negocio/hospitalaria"
 																class="">Hospitalaria</a></li>
-														<li><a href="unidades-de-negocio/dispensacion.html"
+														<li><a routerLink="/unidades-de-negocio/dispensacion"
 																class="">Dispensación</a></li>
 													</ul>
 												</li>
 												<li class="  has-children has-children--multilevel-submenu"><a
 														href="javascript:void(0)" class="">Portafolio</a>
 													<ul class="submenu">
-														<li><a href="portafolio/lineas-de-productos.html"
+														<li><a  routerLink="/portafolio/lineas-de-productos"
 																class="">Lineas de productos</a></li>
-														<li><a href="portafolio/nuestros-proveedores.html"
+														<li><a  routerLink="/portafolio/nuestros-proveedores"
 																class="">Nuestros proveedores</a></li>
 													</ul>
 												</li>
 												<li class="  has-children has-children--multilevel-submenu"><a
-														href="publicaciones.html" class="">Publicaciones</a>
+														routerLink="/publicaciones" class="">Publicaciones</a>
 													<ul class="submenu">
-														<li><a href="publicaciones/regulatorios.html"
+														<li><a routerLink="/publicaciones/regulatorios"
 																class="">Regulatorios</a></li>
-														<li><a href="publicaciones/actualidad.html"
+														<li><a routerLink="/publicaciones/actualidad"
 																class="">Actualidad</a></li>
-														<li><a href="publicaciones/novedades.html"
+														<li><a routerLink="/publicaciones/novedades"
 																class="">Novedades</a></li>
 													</ul>
 												</li>
 												<li class=" active has-children has-children--multilevel-submenu"><a
 														href="javascript:void(0)" class="active">Contacto</a>
 													<ul class="submenu">
-														<li><a href="contacto/directorio.html" class="">Directorio</a>
+														<li><a routerLink="/contacto/directorio" class="">Directorio</a>
 														</li>
-														<li><a href="contacto/trabaje-con-nosotros.html"
+														<li><a routerLink="/contacto/trabaje-con-nosotros"
 																class="">Trabaje con nosotros</a></li>
-														<li><a href="index-1.htm" target="_blank" class="">PQRS</a></li>
-														<li><a href="index-2.htm" target="_blank" class="">Plataforma
+														<li><a href="https://pqrs.ramedicas.com/" target="_blank" class="">PQRS</a></li>
+														<li><a href="https://clientes.ramedicas.com/auth/login" target="_blank" class="">Plataforma
 																Clientes</a></li>
-														<li><a href="contacto.html" class="">Escríbenos</a></li>
+														<li><a routerLink="/contacto" class="">Escríbenos</a></li>
 													</ul>
 												</li>
 											</ul>
@@ -113,7 +113,7 @@
 												id="search-overlay-trigger"><i class="ion-ios-search-strong"></i></a>
 										</div>
 									</div>
-									<div class="get-quote-button-wrapper"><a href="contacto.html">ESCRÍBANOS</a></div>
+									<div class="get-quote-button-wrapper"><a routerLink="/contacto">ESCRÍBANOS</a></div>
 								</div>
 							</div>
 						</div>
@@ -126,7 +126,7 @@
 				<div class="container">
 					<div class="row align-items-center">
 						<div class="col-md-4 col-sm-6 col-9">
-							<div class="logo"><a href="inicio.html"><img src="assets/img/logo/logo-blue-dark.png"
+							<div class="logo"><a routerLink="/home"><img src="assets/img/logo/logo-blue-dark.png"
 										class="img-fluid" alt="Ramédicas"></a></div>
 						</div>
 						<div class="col-md-8 col-sm-6 col-3">
@@ -151,7 +151,7 @@
 						<h3 style="font-weight:600;margin-top:-60px;color:#0265a4;">Página no encontrada</h3>
 						<h4 style="font-weight:600;color:#0265a4;">Lo sentimos, pero no podemos encontrar la página que
 							buscabas.</h4>
-						<h4 style="font-weight:600;color:#0265a4;"> diríjase al <a href="inicio.html"
+						<h4 style="font-weight:600;color:#0265a4;"> diríjase al <a routerLink="/home"
 								style="color:#ff8000;">Inicio</a></h4>
 					</div>
 				</div>
@@ -166,7 +166,7 @@
 						<div class="row">
 							<div class="col-lg-3 col-md-12">
 								<div class="footer-intro-wrapper">
-									<div class="footer-logo"><a href="inicio.html"><img
+									<div class="footer-logo"><a routerLink="/home"><img
 												src="assets/img/logo/logo-blue-light.png" class="img-fluid" alt=""></a>
 									</div>
 									<div class="footer-desc"><i class="ion-ios-telephone"></i> <a
@@ -183,10 +183,10 @@
 								<div class="footer-widget">
 									<h4 class="footer-widget__title">UNIDADES DE NEGOCIO</h4>
 									<ul class="footer-widget__navigation">
-										<li><a href="unidades-de-negocio/dispensacion.html">Dispensación</a></li>
-										<li><a href="unidades-de-negocio/comercializacion.html">Comercialización</a>
+										<li><a routerLink="/unidades-de-negocio/dispensacion">Dispensación</a></li>
+										<li><a routerLink="/unidades-de-negocio/comercializacion">Comercialización</a>
 										</li>
-										<li><a href="unidades-de-negocio/hospitalaria.html">Hospitalaria</a></li>
+										<li><a routerLink="/unidades-de-negocio/hospitalaria">Hospitalaria</a></li>
 									</ul>
 								</div>
 							</div>
@@ -194,8 +194,8 @@
 								<div class="footer-widget">
 									<h4 class="footer-widget__title">PORTAFOLIO</h4>
 									<ul class="footer-widget__navigation">
-										<li><a href="portafolio/lineas-de-productos.html">Lineas de productos</a></li>
-										<li><a href="portafolio/nuestros-proveedores.html">Proveedores</a></li>
+										<li><a  routerLink="/portafolio/lineas-de-productos">Lineas de productos</a></li>
+										<li><a  routerLink="/portafolio/nuestros-proveedores">Proveedores</a></li>
 										<li><a href=""></a></li>
 										<li><a href=""></a></li>
 										<li><a href=""></a></li>
@@ -208,7 +208,7 @@
 									<ul class="footer-widget__navigation">
 										<li><a href="index-3.htm#/auth">Convocatorias proveedores</a></li>
 										<li><a href="index-4.htm">Devoluciones</a></li>
-										<li><a href="index-1.htm">PQRS</a></li>
+										<li><a href="https://pqrs.ramedicas.com/">PQRS</a></li>
 										<li><a href="index-5.htm">RMD Web</a></li>
 										<li><a href=""></a></li>
 									</ul>
@@ -225,10 +225,10 @@
 							<div class="col-md-12">
 								<div class="footer-copyright">
 									<ul class="footer-copyright-right__navigation">
-										<li><a href="nosotros/politica-de-tratamiento-de-datos.html">Política de
+										<li><a  routerLink="nosotros/politica-de-tratamiento-de-datos">Política de
 												tratamiento de datos</a></li>
-										<li><a href="contacto/directorio.html">Servicio al cliente</a></li>
-										<li><a href="contacto.html">Contáctenos</a></li>
+										<li><a routerLink="/contacto/directorio">Servicio al cliente</a></li>
+										<li><a routerLink="/contacto">Contáctenos</a></li>
 									</ul>
 								</div>
 							</div>
@@ -247,7 +247,7 @@
 			<div class="container-fluid--cp-60">
 				<div class="row align-items-center">
 					<div class="col-md-4 col-sm-6 col-9">
-						<div class="logo"><a href="inicio.html"><img src="assets/img/logo/logo-blue-dark.png"
+						<div class="logo"><a routerLink="/home"><img src="assets/img/logo/logo-blue-dark.png"
 									class="img-fluid" alt="Ramédicas"></a></div>
 					</div>
 					<div class="col-md-8 col-sm-6 col-3">
@@ -261,50 +261,50 @@
 		<div class="mobile-menu-overlay__body">
 			<nav class="offcanvas-navigation">
 				<ul>
-					<li class=" "><a href="inicio.html" class=""> Inicio</a></li>
+					<li class=" "><a routerLink="/home" class=""> Inicio</a></li>
 					<li class=" has-children"><a href="javascript:void(0)" class="">Nosotros</a>
 						<ul class="sub-menu">
-							<li><a href="nosotros/quienes-somos.html" class="" hello="">Quienes somos</a></li>
-							<li><a href="nosotros/valores-corporativos.html" class="" hello="">Valores Corporativos</a>
+							<li><a  routerLink="nosotros/quienes-somos" class="" hello="">Quienes somos</a></li>
+							<li><a routerLink="/nosotros/valores-corporativos" class="" hello="">Valores Corporativos</a>
 							</li>
-							<li><a href="nosotros/mision-y-vision.html" class="" hello="">Misión y visión</a></li>
-							<li><a href="nosotros/politicas.html" class="" hello="">Políticas</a></li>
-							<li><a href="nosotros/certificaciones.html" class="" hello="">Certificaciones</a></li>
-							<li><a href="nosotros/politica-de-tratamiento-de-datos.html" class="" hello="">Política de
+							<li><a routerLink="/nosotros/mision-y-vision" class="" hello="">Misión y visión</a></li>
+							<li><a routerLink="/nosotros/politicas" class="" hello="">Políticas</a></li>
+							<li><a routerLink="/nosotros/certificaciones" class="" hello="">Certificaciones</a></li>
+							<li><a  routerLink="nosotros/politica-de-tratamiento-de-datos" class="" hello="">Política de
 									tratamiento de datos</a></li>
 						</ul>
 					</li>
 					<li class=" has-children"><a href="javascript:void(0)" class="">Unidades de negocio</a>
 						<ul class="sub-menu">
-							<li><a href="unidades-de-negocio/comercializacion.html" class=""
+							<li><a routerLink="/unidades-de-negocio/comercializacion" class=""
 									hello="">Comercialización</a></li>
-							<li><a href="unidades-de-negocio/hospitalaria.html" class="" hello="">Hospitalaria</a></li>
-							<li><a href="unidades-de-negocio/dispensacion.html" class="" hello="">Dispensación</a></li>
+							<li><a routerLink="/unidades-de-negocio/hospitalaria" class="" hello="">Hospitalaria</a></li>
+							<li><a routerLink="/unidades-de-negocio/dispensacion" class="" hello="">Dispensación</a></li>
 						</ul>
 					</li>
 					<li class=" has-children"><a href="javascript:void(0)" class="">Portafolio</a>
 						<ul class="sub-menu">
-							<li><a href="portafolio/lineas-de-productos.html" class="" hello="">Lineas de productos</a>
+							<li><a  routerLink="/portafolio/lineas-de-productos" class="" hello="">Lineas de productos</a>
 							</li>
-							<li><a href="portafolio/nuestros-proveedores.html" class="" hello="">Nuestros
+							<li><a  routerLink="/portafolio/nuestros-proveedores" class="" hello="">Nuestros
 									proveedores</a></li>
 						</ul>
 					</li>
-					<li class=" has-children"><a href="publicaciones.html" class="">Publicaciones</a>
+					<li class=" has-children"><a routerLink="/publicaciones" class="">Publicaciones</a>
 						<ul class="sub-menu">
-							<li><a href="publicaciones/regulatorios.html" class="" hello="">Regulatorios</a></li>
-							<li><a href="publicaciones/actualidad.html" class="" hello="">Actualidad</a></li>
-							<li><a href="publicaciones/novedades.html" class="" hello="">Novedades</a></li>
+							<li><a routerLink="/publicaciones/regulatorios" class="" hello="">Regulatorios</a></li>
+							<li><a routerLink="/publicaciones/actualidad" class="" hello="">Actualidad</a></li>
+							<li><a routerLink="/publicaciones/novedades" class="" hello="">Novedades</a></li>
 						</ul>
 					</li>
 					<li class=" active has-children"><a href="javascript:void(0)" class="active">Contacto</a>
 						<ul class="sub-menu">
-							<li><a href="contacto/directorio.html" class="" hello="">Directorio</a></li>
-							<li><a href="contacto/trabaje-con-nosotros.html" class="" hello="">Trabaje con nosotros</a>
+							<li><a routerLink="/contacto/directorio" class="" hello="">Directorio</a></li>
+							<li><a routerLink="/contacto/trabaje-con-nosotros" class="" hello="">Trabaje con nosotros</a>
 							</li>
-							<li><a href="index-1.htm" class="" hello="">PQRS</a></li>
-							<li><a href="index-2.htm" class="" hello="">Plataforma Clientes</a></li>
-							<li><a href="contacto.html" class="" hello="">Escríbenos</a></li>
+							<li><a href="https://pqrs.ramedicas.com/" class="" hello="">PQRS</a></li>
+							<li><a href="https://clientes.ramedicas.com/auth/login" class="" hello="">Plataforma Clientes</a></li>
+							<li><a routerLink="/contacto" class="" hello="">Escríbenos</a></li>
 						</ul>
 					</li>
 				</ul>
